--- a/src/styles/StatSection.css
+++ b/src/styles/StatSection.css
@@ -1,11 +1,56 @@
 .stat-section {
-    width: 100%;
-    padding: 2rem 0.5rem;
+  width: 100%;
+  padding: 2rem 0.5rem;
+  display: flex;
+  justify-content: center;
 }
 .stat-container {
-    display: flex;
-    max-width: 1020px;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  max-width: 1440px;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+.stat-header {
+  width: 100%;
+  max-width: 736px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.stat-header h2 {
+  font-size: 1.75rem;
+  text-align: center;
+}
+
+.stat-header p {
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.stat-cards-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 5rem 0.5rem;
+}
+
+
+
+@media screen and (min-width: 768px) {
+  .stat-section {
+    padding: 4rem 0.5rem;
+  }
+  .stat-header h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .stat-cards-container {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
