user input, shorten card design function problem

--- a/src/styles/BoostSection.css
+++ b/src/styles/BoostSection.css
@@ -44,6 +44,7 @@
 @media screen and (min-width: 768px) {
   .boost-section {
     background-image: url("../assets/images/bg-boost-desktop.svg");
+    background-size: cover;
   }
   .container {
     gap: 40px;
