--- a/src/styles/FormSection.css
+++ b/src/styles/FormSection.css
@@ -1,5 +1,7 @@
 .form-section {
   display: flex;
+  flex-direction: column;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -25,7 +27,8 @@ form {
 
 form .input-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 form .input-container input {
   width: 80%;
@@ -49,10 +52,57 @@ form .input-container input {
   border-radius: 5px;
 }
 
+.shortened-link-container {
+  max-width: 1020px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0.5rem;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 1.2rem;
+}
+.original-link {
+  text-align: start;
+  padding: 0.2rem 0;
+  color: var(--veryDarkBlue);
+  border-bottom: 1px solid var(--gray);
+}
+.shortened-link {
+  text-align: start;
+  color: var(--cyan);
+  padding: 1rem 0rem;
+  display: flex;
+  flex-direction: column;
+}
+.shortened-link button {
+  align-self: center;
+  margin-top: 1.1rem;
+  width: 80%;
+  cursor: pointer;
+  background-color: var(--cyan);
+  color: white;
+  padding: 0.75rem 1.5rem;
+  font-weight: 700;
+  font-size: 0.85rem;
+
+  text-align: center;
+  text-transform: capitalize;
+  border-radius: 5px;
+}
+
+.error-message {
+  color: var(--red);
+  font-style: italic;
+  width: 80%;
+  margin-top: 0.5rem;
+}
+
 @media screen and (min-width: 768px) {
   .form-container {
     padding: 2rem 1.2rem;
   }
+
   form {
     flex-direction: row;
     align-items: center;
@@ -61,6 +111,8 @@ form .input-container input {
   }
   form .input-container {
     width: 80%;
+    align-items: start;
+    height: 50px;
   }
   form .input-container input {
     width: 100%;
@@ -73,6 +125,26 @@ form .input-container input {
   .form-btn-container button {
     margin-top: 0;
     width: 100%;
+  }
+  .shortened-link-container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem 0.5rem;
+  }
+  .original-link {
+    width: 60%;
+    border: none;
+  }
+  .shortened-link {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 40%;
+  }
+  .shortened-link button {
+    width: 30%;
+    margin-top: 0;
   }
 }
 
