--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 main {
   width: 100%;
   height: 100%;
+  background-color: var(--bg-color);
 }
 
 header {
@@ -17,6 +18,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--bg-color);
 }
 
 .navbar {
@@ -82,13 +84,23 @@ header {
 
     font-weight: 600;
   }
-  .btn-container a:last-child:hover {
-    opacity: 0.5;
-  }
 }
 
 @media screen and (min-width: 1020px) {
+  .logo-container a img {
+    width: 150px;
+  }
   .logo-container ul {
     gap: 40px;
+  }
+  .logo-container ul li a {
+    font-size: 1.2rem;
+  }
+
+  .btn-container a {
+    font-size: 1.2rem;
+  }
+  .btn-container a:last-child:hover {
+    background-color: var(--lightCyan);
   }
 }
