--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,10 @@
 
 
 :root {
+  --bg-color: rgb(240, 241, 246);
   --cyan: hsl(180, 66%, 49%);
+  --lightCyan: hsl(180, 86%, 78%);
+
   --darkViolet: hsl(257, 27%, 26%);
   --red: hsl(0, 87%, 67%);
 
