--- a/src/styles/BoostSection.css
+++ b/src/styles/BoostSection.css
@@ -37,9 +37,7 @@
   border-radius: 25px;
   font-size: 1.2rem;
 }
-.container p a:hover {
-  opacity: 0.5;
-}
+
 
 @media screen and (min-width: 768px) {
   .boost-section {
@@ -57,4 +55,14 @@
   }
 }
 
+
+@media screen and (min-width: 1020px) {
+  .container h4 {
+    font-size: 2.5rem;
+  }
+  .container p a:hover {
+    background-color: var(--lightCyan);
+  }
+  
+}
 
