--- a/src/styles/FormSection.css
+++ b/src/styles/FormSection.css
@@ -50,6 +50,7 @@ form .input-container input {
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
+  border: none;
 }
 
 .shortened-link-container {
@@ -85,7 +86,7 @@ form .input-container input {
   padding: 0.75rem 1.5rem;
   font-weight: 700;
   font-size: 0.85rem;
-
+  border: none;
   text-align: center;
   text-transform: capitalize;
   border-radius: 5px;
@@ -149,7 +150,26 @@ form .input-container input {
 }
 
 @media screen and (min-width: 1020px) {
+  .shortened-link button:hover {
+    background-color: var(--lightCyan);
+  }
+  .shortened-link-container {
+    padding: 0rem 1rem;
+
+  }
   .form-container {
     border-radius: 10px;
+  }
+  .input-container input {
+    font-size: 1rem;
+  }
+  .form-btn-container button {
+    font-size: 1rem;
+  }
+  .form-btn-container button:hover {
+    background-color: var(--lightCyan);
+  }
+  .shortened-link button {
+    font-size: 1rem;
   }
 }
