--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -7,7 +7,7 @@
 }
 .hero-container {
   width: 100%;
-  max-width: 1020px;
+  max-width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +17,7 @@
 }
 .hero-img {
   width: 100%;
-  max-width: 560px;
+  max-width: 860px;
   display: flex;
   justify-content: center;
 }
@@ -54,14 +54,10 @@
   text-decoration: none;
 }
 
-.hero-content a:hover {
-  opacity: 0.5;
-}
-
 @media screen and (min-width: 768px) {
   .hero-container {
     flex-direction: row-reverse;
-    justify-content: center;
+    justify-content: space-between;
   }
   .hero-content h1 {
     font-size: 2.6rem;
@@ -76,5 +72,24 @@
     margin-top: 0.5rem;
     align-self: flex-start;
     padding: 0.5rem 1.25rem;
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .hero-container {
+    padding: 3rem 2rem;
+  }
+  .hero-content h1 {
+    font-size: 3.2rem;
+    line-height: 4rem;
+  }
+  .hero-content p {
+    font-size: 1rem;
+  }
+  .hero-content a {
+    padding: 0.75rem 1.5rem;
+  }
+  .hero-content a:hover {
+  background-color: var(--lightCyan);
   }
 }
